--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,33 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Blogs</h1>
+<h1>Mini blog</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Body</th>
-      <th>Like</th>
-      <th>Created at</th>
-      <th>Updated at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= form_for @blog, :url => {:controller => :blogs, :action => :create} do |f| %>
+  <%= f.text_field :body, :placeholder => '投稿しよう', :size => '80%', :name => 'blog[body]', :id => 'blog_body' %>
+  <%= f.submit "投稿する", :name => 'commit', :disable_with => '投稿する' %>
+<% end %>
 
-  <tbody>
-    <% @blogs.each do |blog| %>
-      <tr>
-        <td><%= blog.body %></td>
-        <td><%= blog.like %></td>
-        <td><%= blog.created_at %></td>
-        <td><%= blog.updated_at %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<hr />
 
-<br>
-
-<%= link_to 'New Blog', new_blog_path %>
+<ul id="blogs">
+  <% @blogs.each do |blog| %>
+    <li class="blog">
+      <p><span>
+        <%= blog.id %>: <%= link_to blog.body, blog %>
+      </span></p>
+      <p class="meta">
+        <span class="like">いいね:<%= blog.like %>|</span>
+        <span class="comment">コメント数:まだないよ|</span>
+        <span class="post-date">投稿日時:<%= blog.created_at.strftime("%Y/%m/%d %H:%M:%S") %></span>
+      </p>
+    </li>
+  <% end %>
+</ul>
