--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -17,7 +17,7 @@
       </span></p>
       <p class="meta">
         <span class="like">いいね:<%= blog.like %>|</span>
-        <span class="comment">コメント数:まだないよ|</span>
+        <span class="comment">コメント数:<%= @replies.where(blog_id:blog.id).count %>|</span>
         <span class="post-date">投稿日時:<%= blog.created_at.strftime("%Y/%m/%d %H:%M:%S") %></span>
       </p>
     </li>
