add the like function

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,8 +16,8 @@
         <%= blog.id %>: <%= link_to blog.body, blog %>
       </span></p>
       <p class="meta">
-        <span class="like">いいね:<%= blog.like %>|</span>
-        <span class="comment">コメント数:<%= @replies.where(blog_id:blog.id).count %>|</span>
+        <span class="like"><%= link_to 'いいね', action: 'like', controller: 'blogs', id: blog.id  %>:<%= blog.like %>|</span>
+        <span class="comment">コメント数:<%= @replies.where(blog_id:blog.id).size %>|</span>
         <span class="post-date">投稿日時:<%= blog.created_at.strftime("%Y/%m/%d %H:%M:%S") %></span>
       </p>
     </li>
